--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
+            padding:0;
             background-color: #f4f4f4;
             text-align: center;
             padding: 20px;
@@ -21,7 +21,7 @@
         }
 
         p {
-            color: #555;
+            color: #100f0f;
             font-size: 18px;
             line-height: 1.6;
         }
@@ -43,7 +43,17 @@
             background-color: #4CAF50;
             color: #fff;
         }
-
+        video {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+        }
         footer {
             position: absolute;
             bottom: 0;
@@ -58,7 +68,9 @@
 </head>
 <body>
     <h1>About Us</h1>
-    
+    <video autoplay muted loop >
+        <source src="vid4.mp4" type="video/mp4">
+    </video>
     <p>Welcome to our vegetable shop! We are passionate about providing fresh and high-quality vegetables to our customers.</p>
 
     <p>Contact us at: <a href="mailto:info@example.com">info@example.com</a></p>
