--- a/services.html
+++ b/services.html
@@ -15,13 +15,25 @@
             color: #333;
         }
 
+        
+        video {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+        }
         h1 {
-            color: #4e534e;
+            color: #ecf3ec;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Add a subtle text shadow */
         }
 
         p {
-            color: #555;
+            color: #f3ebeb;
             font-size: 18px;
             line-height: 1.6;
         }
@@ -81,7 +93,9 @@
     </style>
 </head>
 <body>
-
+    <video autoplay muted loop >
+        <source src="vid5.mp4" type="video/mp4">
+    </video>
     <h1>Our Services</h1>
 
     <p>Discover our range of services designed to meet your needs:</p>
