Added video to bg

--- a/checkout.html
+++ b/checkout.html
@@ -67,7 +67,7 @@
             bottom: 0;
             width: 100%;
             background-color: #4CAF50;
-            color: #fff;
+            color: #e1dbdb;
             padding: 10px;
             text-align: center;
         }
