--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         }
 
 
-        // Vegetable data
+        // Vegetable Data
         const vegetables = [
             { id: 1, name: 'Carrot', image: 'carrot.jpg', price: 11.99 },
             { id: 2,name: 'Tomato', image: 'tomatoes.jpg', price: 29.49 },
