--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
             z-index: -1;
         }
         h1 {
-            color: #ecf3ec;
+            color: #f1f5f1;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Add a subtle text shadow */
         }
 
