--- a/contactus.html
+++ b/contactus.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #e9e5e5;
             text-align: center;
             padding: 20px;
             color: #333;
